--- a/style.css
+++ b/style.css
@@ -13,27 +13,77 @@ body {
 header {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 
     background-color: #1F2937;
 }
 
 header p {
+    color: #F9FAF8;
     font-size: 24px;
     font-weight: 700;
-    color: #F9FAF8;
 }
 
 nav ul {
     gap: 24px;
     display: flex;
-    list-style: none;
-
     font-size: 18px;
-    
+    list-style: none;
 }
 
 nav ul a {
     color: #E5E7EB;
     text-decoration: none;
+}
+
+#hero {
+    
+    padding: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    background-color: #1F2937;
+}
+
+h1 {
+    margin: 0;
+    
+    color:#F9FAF8;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.hero-left p {
+    margin: 8px 0;
+    
+    color: #E5E7EB;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.signup-btn {
+    padding: 8px 24px;
+    
+    color: #F9FAF8;
+    font-size: 18px;
+    font-weight: 700;
+
+    border: none;
+    border-radius: 8px;
+
+    background-color: #3882f6;
+}
+
+.hero-right {
+    color: #E5E7EB;
+    
+    width: 500px;
+    height: 250px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    background-color: gray;
 }
