--- a/style.css
+++ b/style.css
@@ -89,3 +89,44 @@ h1 {
     
     background-color: gray;
 }
+
+#info {
+    padding: 16px 0 72px 0;
+
+    background-color:#F9FAF8 ;
+}
+
+#info h2 {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 900;
+    text-align: center;
+    margin-bottom: 42px;
+}
+
+#info .cards {
+    gap: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.info-card {
+    display: flex;
+    max-width: 150px;
+    align-items: center;
+    flex-direction: column;
+}
+
+.info-img {
+    width: 150px;
+    height: 150px;
+
+    border-radius: 16px;
+    border: 4px solid #3882f6;
+}
+
+.info-text {
+    color: gray;
+    text-align: center;
+}
