feat: style footer

--- a/style.css
+++ b/style.css
@@ -203,3 +203,16 @@ blockquote {
 .signup-right .signup-btn {
     border: 2px solid #F9FAF8;
 }
+
+footer {
+    padding: 24px;
+    text-align: center;
+    background-color: #1F2937;
+}
+
+footer p {
+    margin: 0;
+
+    color: #F9FAF8;
+    font-size: 16px;
+}
